--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,9 @@ body {
 	margin: 0;
 	padding: 0;
 }
-
+*::-webkit-scrollbar {
+	display: none;
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
