--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,8 @@ body {
 	margin: 0;
 	padding: 0;
 }
-*::-webkit-scrollbar {
-	display: none;
-}
+/* *::-webkit-scrollbar {
+} */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
